Tooltip: Convert arrrow to us rem

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -872,7 +872,7 @@ $tooltip-opacity:       .9 !default;
 $tooltip-border-radius: .25rem !default;
 
 // Arrow dimension in pixels to get proper visual layout
-$tooltip-arrow-width:   4px !default;
+$tooltip-arrow-width:   .25rem !default;
 $tooltip-arrow-color:   $tooltip-bg !default;
 
 
