--- a/docs/assets/scss/_examples.scss
+++ b/docs/assets/scss/_examples.scss
@@ -128,7 +128,7 @@ $custom-file-text: (
     )
 );
 .custom-file-control {
-    @each $lang, $text in map-get($custom-file-text, placeholder) {
+    @each $lang, $text in map-get($custom-file-text, button-label) {
         &:lang(#{$lang}):empty::after {
             content: $text;
         }
