Modal: Remove incorrect left/right margin

--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -60,7 +60,8 @@
     margin-bottom: 0;
 
     .modal-content {
-        margin: $modal-dialog-margin;
+        margin-top: $modal-dialog-margin;
+        margin-bottom: $modal-dialog-margin;
     }
 }
 
