--- a/scss/component/_button-group.scss
+++ b/scss/component/_button-group.scss
@@ -34,8 +34,8 @@
     }
 }
 
-// Prevent double borders when buttons are next to each other
 .btn-group {
+    // Prevent double borders when buttons are next to each other
     .btn + .btn,
     .btn + .btn-group,
     .btn-group + .btn,
@@ -43,37 +43,19 @@
         margin-left: -$border-width;
     }
 
-    > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
-        border-radius: 0;
-    }
-
-    // Set corners individual because sometimes a single button can be in a .btn-group and we need :first-child and :last-child to both match
     > .btn:first-child {
-        &:not(:last-child):not(.dropdown-toggle) {
-            @include border-end-radius(0);
-        }
+        margin-left: 0;
     }
 
-    // Need .dropdown-toggle since :last-child doesn't apply given a .dropdown-menu immediately after it
-    > .btn:last-child:not(:first-child),
-    > .dropdown-toggle:not(:first-child) {
-        @include border-start-radius(0);
+    // Reset rounded corners individual because sometimes a single button can be
+    // in a .btn-group and we need :first-child and :last-child to both match.
+    > .btn:not(:last-child):not(.dropdown-toggle),
+    > .btn-group:not(:last-child) > .btn {
+        @include border-end-radius(0);
     }
 
-    // Custom edits for including btn-groups within btn-groups (useful for including dropdown buttons within a btn-group)
-    > .btn-group {
-        float: left;
-    }
-    > .btn-group:not(:first-child):not(:last-child) > .btn {
-        border-radius: 0;
-    }
-    > .btn-group:first-child:not(:last-child) {
-        > .btn:last-child,
-        > .dropdown-toggle {
-            @include border-end-radius(0);
-        }
-    }
-    > .btn-group:last-child:not(:first-child) > .btn:first-child {
+    > .btn:not(:first-child),
+    > .btn-group:not(:first-child) > .btn {
         @include border-start-radius(0);
     }
 }
@@ -120,6 +102,10 @@
     > .btn-group + .btn,
     > .btn-group + .btn-group {
         margin-top: -$border-width;
+    }
+
+    > .btn:first-child {
+        margin-top: 0;
     }
 
     > .btn {
