--- a/docs/assets/css/docs-rtl.css
+++ b/docs/assets/css/docs-rtl.css
@@ -384,6 +384,7 @@ h4 > code {
 
 .cf-example {
   padding: 1rem;
+  overflow: auto;
   background-color: #fff;
   border: 1px solid #e1e1e8;
   border-radius: .25rem .25rem 0 0;
