Make custom file input 100% width to match other form controls

--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -210,7 +210,7 @@
 .custom-file {
     position: relative;
     display: inline-block;
-    max-width: 100%;
+    width: 100%;
     height: $select-height;
     margin-bottom: 0;
 }
