--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -25,12 +25,20 @@
 
 // Border addition
 .border { border: $border-width solid $border-color !important; }
+.border-t,
 .border-y {
     border-top: $border-width solid $border-color !important;
-    border-bottom: $border-width solid $border-color !important;
 }
+.border-e,
 .border-x {
     border-right: $border-width solid $border-color !important;
+}
+.border-b,
+.border-y {
+    border-bottom: $border-width solid $border-color !important;
+}
+.border-s,
+.border-x {
     border-left: $border-width solid $border-color !important;
 }
 
