--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -142,7 +142,7 @@
   box-shadow: 2px 2px 0.2rem rgba(0, 0, 0, 0.35);
 }
 
-.btn-start:focus, .btn-start:hover {
+.btn-start:hover, .btn-start:focus {
   color: #222;
   background-color: rgba(255, 255, 255, 0.9);
 }
@@ -216,7 +216,7 @@
   transition: opacity .2s ease-in-out .1s;
 }
 
-.anchorjs-link:focus, .anchorjs-link:hover {
+.anchorjs-link:hover, .anchorjs-link:focus {
   color: inherit;
   text-decoration: none;
 }
@@ -645,7 +645,7 @@ h4 > code {
   color: rgba(255, 255, 255, 0.9);
 }
 
-.cf-feed a:focus, .cf-feed a:hover {
+.cf-feed a:hover, .cf-feed a:focus {
   color: white;
 }
 
@@ -1049,7 +1049,7 @@ h4 > code {
   border-left: 0;
 }
 
-.btn:focus .example-caret, .btn:hover .example-caret {
+.btn:hover .example-caret, .btn:focus .example-caret {
   border-top: 0.5rem solid transparent;
   border-right: 0;
   border-bottom: 0.5rem solid transparent;
