--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -5,9 +5,9 @@
     align-items: stretch;
     width: 100%;
 
-    .form-control,
-    .custom-select,
-    .custom-file {
+    > .form-control,
+    > .custom-select,
+    > .custom-file {
         // Ensure that the input is always above the *appended* addon button for
         // proper border colors.
         position: relative;
@@ -32,9 +32,9 @@
 
 .input-group-addon,
 .input-group-btn,
-.input-group .form-control,
-.input-group .custom-select,
-.input-group .custom-file-control {
+.input-group > .form-control,
+.input-group > .custom-select,
+.input-group > .custom-file-control {
     display: flex;
     align-items: center;
 
@@ -48,7 +48,7 @@
     white-space: nowrap;
 }
 
-.input-group .custom-file {
+.input-group > .custom-file {
     display: flex;
     align-items: center;
 }
@@ -169,9 +169,9 @@
 
 
 // Reset rounded corners
-.input-group .form-control:not(:last-child),
-.input-group .custom-select:not(:last-child),
-.input-group .custom-file:not(:last-child) .custom-file-control,
+.input-group > .form-control:not(:last-child),
+.input-group > .custom-select:not(:last-child),
+.input-group > .custom-file:not(:last-child) .custom-file-control,
 .input-group-addon:not(:last-child),
 .input-group-btn:not(:last-child) > .btn,
 .input-group-btn:not(:last-child) > .btn-group > .btn,
@@ -185,9 +185,9 @@
     border-right: 0;
 }
 
-.input-group .form-control:not(:first-child),
-.input-group .custom-select:not(:first-child),
-.input-group .custom-file:not(:first-child) .custom-file-control,
+.input-group > .form-control:not(:first-child),
+.input-group > .custom-select:not(:first-child),
+.input-group > .custom-file:not(:first-child) .custom-file-control,
 .input-group-addon:not(:first-child),
 .input-group-btn:not(:first-child) > .btn,
 .input-group-btn:not(:first-child) > .btn-group > .btn,
