--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,6 +1,7 @@
 // Toggles
 // Used in conjunction with global variables to enable certain theme features.
 @import "mixins/box-shadow";
+@import "mixins/font-size";
 @import "mixins/gradients";
 @import "mixins/transition";
 
