--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -57,7 +57,7 @@
 .input-group-addon {
     padding: $input-padding-y $input-padding-x;
     margin-bottom: 0; // Allow use of <label> elements by overriding our default margin-bottom
-    font-size: $font-size-base;
+    @include font-size($font-size-base);
     font-weight: $font-weight-normal;
     line-height: $input-line-height;
     color: $input-group-addon-color;
