--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -66,7 +66,7 @@ section {
 body {
     margin: 0; // 1
     font-family: $font-family-base;
-    font-size: $font-size-base;
+    @include font-size($font-size-base);
     font-weight: $font-weight-base;
     line-height: $line-height-base;
     color: $body-color;
