--- a/scss/component/_badge.scss
+++ b/scss/component/_badge.scss
@@ -2,7 +2,7 @@
 .badge {
     display: inline-block;
     padding: $badge-padding-y $badge-padding-x;
-    font-size: $badge-font-size;
+    @include font-size($badge-font-size);
     font-weight: $badge-font-weight;
     line-height: 1;
     color: $badge-color;
