--- a/scss/component/_progress.scss
+++ b/scss/component/_progress.scss
@@ -7,7 +7,7 @@
     display: flex;
     height: $progress-height;
     overflow: hidden; // Force rounded corners by cropping
-    font-size: $progress-font-size;
+    @include font-size($progress-font-size);
     background-color: $progress-bg;
     @include border-radius($progress-border-radius);
     @include box-shadow($progress-box-shadow);
