--- a/scss/core/_images.scss
+++ b/scss/core/_images.scss
@@ -26,6 +26,6 @@
     line-height: 1;
 }
 .figure-caption {
-    font-size: $figure-caption-font-size;
+    @include font-size($figure-caption-font-size);
     color: $figure-caption-color;
 }
