--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -14,16 +14,16 @@ h6, .h6 {
     color: $headings-color;
 }
 
-h1, .h1 { font-size: $font-size-h1; }
-h2, .h2 { font-size: $font-size-h2; }
-h3, .h3 { font-size: $font-size-h3; }
-h4, .h4 { font-size: $font-size-h4; }
-h5, .h5 { font-size: $font-size-h5; }
-h6, .h6 { font-size: $font-size-h6; }
+h1, .h1 { @include font-size($font-size-h1); }
+h2, .h2 { @include font-size($font-size-h2); }
+h3, .h3 { @include font-size($font-size-h3); }
+h4, .h4 { @include font-size($font-size-h4); }
+h5, .h5 { @include font-size($font-size-h5); }
+h6, .h6 { @include font-size($font-size-h6); }
 
 // Lead in
 .lead {
-    font-size: $lead-font-size;
+    @include font-size($lead-font-size);
     font-weight: $lead-font-weight;
     line-height: $lead-line-height;
 }
@@ -39,7 +39,7 @@ hr {
 // Emphasis
 small,
 .small {
-    font-size: $small-font-size;
+    @include font-size($small-font-size);
     font-weight: $font-weight-normal;
 }
 
@@ -77,12 +77,12 @@ mark,
 // Blockquotes
 .blockquote {
     margin-bottom: $spacer;
-    font-size: $blockquote-font-size;
+    @include font-size($blockquote-font-size);
     color: $blockquote-color;
 }
 .blockquote-footer {
     display: block;
-    font-size: $blockquote-footer-font-size;
+    @include font-size($blockquote-footer-font-size);
     color: $blockquote-footer-color;
 
     &::before {
