--- a/scss/functions/_rem-calc.scss
+++ b/scss/functions/_rem-calc.scss
@@ -1,6 +1,6 @@
 // stylelint-disable length-zero-no-unit
 
-// Remove the unit of a length
+// Remove the unit from a value, returning number only.
 // From: https://css-tricks.com/snippets/sass/strip-unit-function/
 // @param {Number} $number - Number to remove unit from
 // @return {Number} - Unitless number
@@ -12,56 +12,26 @@
     @return $number;
 }
 
-
-// Converts one or more pixel values into matching rem values.
-// Borrowed from: https://github.com/zurb/foundation-sites/blob/develop/scss/util/_unit.scss
-// @param {Number|List} $values - One or more values to convert. Be sure to separate them with spaces and not commas. If you need to convert a comma-separated list, wrap the list in parentheses.
-// @param {Number} $base [null] - The base value to use when calculating the `rem`. If you're using Figuration out of the box, this is 16px. If this parameter is `null`, the function will reference the `$font-size-root` variable as the base.
-// @returns {List} A list of converted values.
-@function rem-calc($values, $base: null) {
-    $rem-values: ();
-    $count: length($values);
-
-    // If no base is defined, assume 100% default
-    @if $base == null {
-        $base: 100%;
-    }
-
-    // If the base font size is a %, then multiply it by 16px
-    // This is because 100% font size = 16px in most browsers
-    @if unit($base) == "%" {
-        $base: ($base / 100%) * 16px;
-    }
-
-    @if $count == 1 {
-        @return _px-to-rem($values, $base);
-    }
-
-    @for $i from 1 through $count {
-        $rem-values: append($rem-values, _px-to-rem(nth($values, $i), $base));
-    }
-
-    @return $rem-values;
-}
-
-
-// Converts a pixel value to matching rem value. *Any* value passed, regardless of unit, is assumed to be a pixel value.
-// By default, the base pixel value used to calculate the rem value is taken from the `$font-size-root` variable.
-// Borrowed from: https://github.com/zurb/foundation-sites/blob/develop/scss/util/_unit.scss
-// @access private
+// Converts any value to matching rem value.
+// *Any* value passed, regardless of unit, is assumed to be a pixel value.
 // @param {Number} $value - Pixel value to convert.
-// @param {Number} $base [null] - Base for pixel conversion.
 // @returns {Number} A number in rems, calculated based on the given value and the base pixel value. rem values are passed through as is.
-@function _px-to-rem($value, $base: null) {
+@function -any-to-rem($value) {
     // Check if the value is a number
     @if type-of($value) != "number" {
-        @warn inspect($value) + " was passed to rem-calc(), which is not a number.";
+        @warn inspect($value) + " was passed to rem(), which is not a number.";
         @return $value;
     }
 
-    // Calculate rem if units for $value is not rem
+    // Convert em into rem
+    @if unit($value) == "em" {
+        $value: strip-unit($value) * 1rem;
+    }
+
+    // Calculate rem if units for $value is not rem or em
+    // Using 16px = 100% font size common in most browsers
     @if unit($value) != "rem" {
-        $value: strip-unit($value) / strip-unit($base) * 1rem;
+        $value: strip-unit($value) / strip-unit(16px) * 1rem;
     }
 
     // Turn 0rem into 0
@@ -72,13 +42,29 @@
     @return $value;
 }
 
+// Converts one or more values into matching rem values.
+// @param {Number|List} $values - One or more values to convert. Be sure to separate them with spaces and not commas. If you need to convert a comma-separated list, wrap the list in parentheses.
+// @returns {List} A list of converted values.
+@function rem($values) {
+    $rem-values: ();
+    $count: length($values);
+
+    @if $count == 1 {
+        @return _any-to-rem($values);
+    }
+
+    @for $i from 1 through $count {
+        $rem-values: append($rem-values, _any-to-rem(nth($values, $i)));
+    }
+
+    @return $rem-values;
+}
 
 // Converts a unitless, pixel, or rem value to em, for use in breakpoints.
-// Borrowed from: https://github.com/zurb/foundation-sites/blob/develop/scss/util/_unit.scss
 @function bp-to-em($value) {
     // Pixel and unitless values are converted to rem
     @if unit($value) == "px" or unitless($value) {
-        $value: rem-calc($value, $base: 16px);
+        $value: rem($value);
     }
 
     // Convert to em
