--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -73,7 +73,7 @@
 // Button sizes
 @mixin button-size($padding-y, $padding-x, $font-size, $border-radius) {
     padding: $padding-y $padding-x;
-    font-size: $font-size;
+    @include font-size($font-size);
     // Manually declare to provide an override to the browser default
     @if $enable-rounded {
         border-radius: $border-radius;
