--- a/scss/mixins/_pagination.scss
+++ b/scss/mixins/_pagination.scss
@@ -3,7 +3,7 @@
     .page-text,
     .page-link {
         padding: $padding-y $padding-x;
-        font-size: $font-size;
+        @include font-size($font-size);
     }
 
     .page-item {
