--- a/scss/mixins/_switch.scss
+++ b/scss/mixins/_switch.scss
@@ -22,7 +22,7 @@
     .switch-control {
         width: ($font-size * $switch-width-multiplier);
         height: $outer-height;
-        font-size: $font-size;
+        @include font-size($font-size);
         @include border-radius($border-radius);
 
         &::before {
@@ -31,7 +31,7 @@
     }
 
     .switch-description {
-        font-size: $font-size;
+        @include font-size($font-size);
     }
 
     &.switch-rounded {
