--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -36,7 +36,7 @@
 
 <!-- jQuery -->
 <script src="{{ site.cdn.jquery }}" integrity="{{ site.cdn.jquery_hash }}" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
 
 <!-- MutationObserver Polyfill -->
 {% if site.github %}
